Fix the bottom navbar alignment problem

--- a/mobile/public/css/tube.css
+++ b/mobile/public/css/tube.css
@@ -17,3 +17,12 @@ body {
 	font-weight:bold;
 	font-size:1.1em;
 }
+
+
+.nav-glyphish .ui-btn .ui-btn-inner { padding-top: 40px !important; }
+.nav-glyphish .ui-btn .ui-icon { width: 30px!important; height: 30px!important; margin-left: -15px !important; box-shadow: none!important; -moz-box-shadow: none!important; -webkit-box-shadow: none!important; -webkit-border-radius: 0 !important; border-radius: 0 !important; }
+#tubemap_btn .ui-icon { background:  url(/public/img/map.png) 50% 50% no-repeat; background-size: 26px 21px; }
+#filter_btn .ui-icon { background:  url(/public/img/filter.png) 50% 50% no-repeat; background-size: 24px 24px;  }
+#places_btn .ui-icon { background:  url(/public/img/quick-places.png) 50% 50% no-repeat;  background-size: 16px 26px; }
+#help_btn .ui-icon { background:  url(/public/img/help.png) 50% 50% no-repeat;  background-size: 24px 26px; }
+#about_btn .ui-icon { background:  url(/public/img/about.png) 50% 50% no-repeat;  background-size: 18px 26px; }
